# rpi-pico

./: .gitignore  CMakeLists.txt  README.md  flash.sh  main.cpp
include/: lwipopts.h  secrets.h.example
